--- a/text/imgPCA.bib
+++ b/text/imgPCA.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Roberto Stelling at 2018-02-05 11:22:03 -0200 
+%% Created for Roberto Stelling at 2018-02-05 13:19:00 -0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{zwick1986comparison,
+	Author = {Zwick, William R and Velicer, Wayne F},
+	Date-Added = {2018-02-05 15:18:50 +0000},
+	Date-Modified = {2018-02-05 15:18:50 +0000},
+	Journal = {Psychological bulletin},
+	Number = {3},
+	Pages = {432},
+	Publisher = {US: American Psychological Association},
+	Title = {Comparison of five rules for determining the number of components to retain.},
+	Volume = {99},
+	Year = {1986}}
 
 @article{hotelling1933analysis,
 	Author = {Hotelling, Harold},
