--- a/text/imgPCA.tex
+++ b/text/imgPCA.tex
@@ -40,10 +40,22 @@ Traditionally PCA Analysis for features reduction in images is performed without
 There are many reasons to reduce a data set, some modern examples are: noise reduction, outlier removal, lossy image compression or even as a preliminary step in various types of data exploration and data analysis.\par
 Principal component analysis (PCA) is well suited as a lossy image compression solution, as you can apply PCA on a set of points of a data set and reduce its dimensionality with a certain, desirably controllable, loss of precision. Of course, one want to loose as little precision as possible while compressing as much as possible. There is a clear trade off between compression and precision. With images, the main difficulty resides in this very trade off: how many dimensions can the algorithm throw away and still retain the desired level of image quality or sharpness? Is there a general rule where you can certainly decide how many dimensions will be cut off the original data set? Of course, the type and amount of data available for compression, the data set, has a big influence on the final point where the cut will be, but can the analyst decide simply on the number of dimensions or amount of variance that will be thrown away and be sure that the results will be satisfactory? We propose that using a visual helping tool during the decision process can have a positive impact on the cut off selection.
 
-\section{Brief history of PCA}
+\section{Brief introduction to PCA}
+\subsection{Objective}
 According to \citet{jolliffe1986principal}, the central idea of principal component analysis (PCA) is to reduce the dimensionality of a data set in which there are a large number of interrelated variables, while retaining as much as possible of the variation present in the data set.\par
 This reduction is achieved by transforming the data set to a new set of variables, the principal components, which are not correlated, and which are ordered so that the first few retain most of the variation present in all the original variables.\par Principal component analysis was first described by \citet{pearson1901principal} and later developed independently by \citet{hotelling1933analysis} \citep{jolliffe1986principal}.\par
+\subsection{Intuition}
+PCA can be thought of as the problem of fitting an n-dimensional ellipsoid to the data, where each axis of the ellipsoid represents a principal component. The larger the axis of a component, the larger the variance for that component.
+To find the axis of the ellipsoid we must first centralize, or normalize, the data set, compute the covariance matrix of the data and finally compute the eigenvalues and eigenvectors of the covariance matrix.\par
+To achieve that we compute the singular value decomposition of the covariance matrix.
+\subsection{Singular Value Decomposition}
+If \textit{C} is the covariance matrix of our data set then: \[C = US V^T\] where \textit{S} is a diagonal matrix with positivel real entries and \textit{U} and \textit{V} columns are orthonormal\footnote{both orthogonal and normalized}.\par
+Suppose that we have $m$ data points of $n$ dimensions (EG: 2000 images with 1024 pixels, m = 2000, n = 1024) then \[D_{m\times n} \to C_{n\times n}=cov(D) \]
+For the singular value decomposition of the covariance matrix we have: \[C_{n\times n} = U_{n\times n}S_{n\times n}V_{n\times n}^T\] where S is a diagonal matrix.
 
+\section{How to select the number of components to retain}
+The problem of selecting how many components to retain is not new, \citet{zwick1986comparison}, present the results of a Monte Carlo evaluation of five methods that have been proposed for determining how many factors or components to retain: Horn's parallel analysis, Velicer's minimum average partial [MAP], Cattell's scree test, Bartlett's chi-square test, and Kaiser's eigenvalue greater than 1.0 rule. 
+The determination of the number of components or factors to retain is likely to be the most important decision a researcher will make \citep{zwick1986comparison}.
 
 
 \section{Citations, figures, tables, references}
