Updated bibliography, better SVD description

--- a/text/imgPCA.bib
+++ b/text/imgPCA.bib
@@ -1,12 +1,23 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Roberto Stelling at 2018-02-05 13:19:00 -0200 
+%% Created for Roberto Stelling at 2018-02-06 12:52:08 -0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{craw1992face,
+	Author = {Craw, Ian and Cameron, Peter},
+	Booktitle = {BMVC92},
+	Date-Added = {2018-02-06 14:51:18 +0000},
+	Date-Modified = {2018-02-06 14:52:00 +0000},
+	Keywords = {Face Recognition},
+	Pages = {498--507},
+	Publisher = {Springer},
+	Title = {Face recognition by computer},
+	Year = {1992}}
 
 @article{zwick1986comparison,
 	Author = {Zwick, William R and Velicer, Wayne F},
