--- a/text/imgPCA.bib
+++ b/text/imgPCA.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Roberto Stelling at 2018-02-06 12:52:08 -0200 
+%% Created for Roberto Stelling at 2018-02-06 18:58:12 -0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{Stelling:aa,
+	Author = {GitHub},
+	Date-Added = {2018-02-06 20:50:34 +0000},
+	Date-Modified = {2018-02-06 20:58:00 +0000},
+	Keywords = {PCA, Github},
+	Lastchecked = {02/06/2018},
+	Title = {https://github.com/RobStelling/imgPca},
+	Urldate = {https://github.com/RobStelling/imgpca}}
 
 @incollection{craw1992face,
 	Author = {Craw, Ian and Cameron, Peter},
