Adjusted reference for URL.

--- a/text/imgPCA.bib
+++ b/text/imgPCA.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Roberto Stelling at 2018-02-06 18:58:12 -0200 
+%% Created for Roberto Stelling at 2018-02-06 19:27:54 -0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -9,13 +9,13 @@
 
 
 @url{Stelling:aa,
-	Author = {GitHub},
+	Author = {ImgPCA-GitHub},
 	Date-Added = {2018-02-06 20:50:34 +0000},
-	Date-Modified = {2018-02-06 20:58:00 +0000},
+	Date-Modified = {2018-02-06 21:23:12 +0000},
 	Keywords = {PCA, Github},
 	Lastchecked = {02/06/2018},
 	Title = {https://github.com/RobStelling/imgPca},
-	Urldate = {https://github.com/RobStelling/imgpca}}
+	Urldate = {2018}}
 
 @incollection{craw1992face,
 	Author = {Craw, Ian and Cameron, Peter},
@@ -41,9 +41,9 @@
 	Year = {1986}}
 
 @article{hotelling1933analysis,
-	Author = {Hotelling, Harold},
+	Author = {Harold Hotelling},
 	Date-Added = {2018-02-05 13:20:14 +0000},
-	Date-Modified = {2018-02-05 13:20:14 +0000},
+	Date-Modified = {2018-02-06 21:27:52 +0000},
 	Journal = {Journal of educational psychology},
 	Number = {6},
 	Pages = {417},
