--- a/text/imgPCA.tex
+++ b/text/imgPCA.tex
@@ -97,7 +97,7 @@ The problem of selecting how many components to retain is not new, \citet{zwick1
 The determination of the number of components or factors to retain is likely to be the most important decision a researcher will make \citet{zwick1986comparison}.
 
 \section{Implementation}
-The code for the implementation and supporting documents can be found at \cite{Stelling:aa}.
+The code for the implementation and supporting documents can be found at \citet{Stelling:aa}.
 
 \section{Citations, figures, tables, references}
 \label{others}
