Correct typo on notebook

--- a/notebooks/PCA_Example.ipynb
+++ b/notebooks/PCA_Example.ipynb
@@ -356,7 +356,7 @@
    "metadata": {},
    "source": [
     "## Compute the covariance matrix\n",
-    "$\\Sigma = M'M/(sampleSize - 1)$"
+    "$\\Sigma = M^{T}M/(sampleSize - 1)$"
    ]
   },
   {
