Expansion of PCA for Image Compression section.

--- a/text/imgPCA.bib
+++ b/text/imgPCA.bib
@@ -1,12 +1,36 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Roberto Stelling at 2018-02-06 19:27:54 -0200 
+%% Created for Roberto Stelling at 2018-02-08 11:39:22 -0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{lawson1974solving,
+	Author = {Lawson, C.L. and Hanson, R.J.},
+	Date-Added = {2018-02-08 13:39:01 +0000},
+	Date-Modified = {2018-02-08 13:39:01 +0000},
+	Isbn = {9780138225858},
+	Lccn = {73020119},
+	Publisher = {Prentice-Hall},
+	Series = {Prentice-Hall series in automatic computation},
+	Title = {Solving least squares problems},
+	Url = {https://books.google.com.br/books?id=ChrvAAAAMAAJ},
+	Year = {1974},
+	Bdsk-Url-1 = {https://books.google.com.br/books?id=ChrvAAAAMAAJ}}
+
+@article{preisendorfer1988principal,
+	Author = {Rudolph W. Preisendorfer and Curtis D. Mobley},
+	Date-Added = {2018-02-08 12:41:37 +0000},
+	Date-Modified = {2018-02-08 13:06:55 +0000},
+	Journal = {Elsevier Sci. Publ.},
+	Keywords = {PCA},
+	Pages = {425},
+	Title = {Principal component analysis in meteorology and oceanography},
+	Volume = {17},
+	Year = {1988}}
 
 @url{Stelling:aa,
 	Author = {ImgPCA-GitHub},
