--- a/text/imgPCA.tex
+++ b/text/imgPCA.tex
@@ -46,12 +46,15 @@ Principal component analysis (PCA) is well suited as a lossy image compression s
 \section{Brief introduction to PCA}
 \subsection{Objective}
 According to \citet{jolliffe1986principal}, the central idea of principal component analysis (PCA) is to reduce the dimensionality of a data set in which there are a large number of interrelated variables, while retaining as much as possible of the variation present in the data set.\par
-This reduction is achieved by transforming the data set to a new set of variables, the principal components, which are not correlated, and which are ordered so that the first few retain most of the variation present in all the original variables.\par Principal component analysis was first described by \citet{pearson1901principal} and later developed independently by \citet{hotelling1933analysis} \citep{jolliffe1986principal}.\par
+This reduction is achieved by transforming the data set to a new set of variables, the principal components, which are not correlated, and which are ordered so that the first few retain most of the variation present in all the original variables.\par
+\subsection{Brief History of PCA}
+Principal component analysis was first described by \citet{pearson1901principal} and later developed independently by \citet{hotelling1933analysis} \citep{jolliffe1986principal}.\par
+\citet{preisendorfer1988principal} state that in 1873, the Italian geometer Beltrami, formulated a modern form of the resolution of a general square matrix into its singular value decomposition (SVD), the decomposition that stands at the base of PCA.\par
 \citet{craw1992face} describe a method for face recognition using principal component analisys, showing that PCA can be used as an effective tool in image analysis.
 \subsection{Intuition}
 PCA can be thought of as the problem of fitting an $n$-dimensional ellipsoid to the $m$-dimensional data, where $n<=m$ and each axis of the ellipsoid represents a principal component. The larger the axis of a component, the larger the variance for that component. So, the objective of PCA is to build a transformation of $m$-dimensional space to $n$-dimensional space while preserving most of the the $m$-dimensional space variance. To find that transformation and the components, we compute the singular value decomposition of the data. The singular value decomposition will provide a computationally efficient method of finding the principal components and the scaled versions of the principal component scores.
 \subsection{Singular Value Decomposition}
-Given an arbitrary $D_{m\times n}$ matrix, then $D$ can be written as 
+Given an arbitrary $D_{m\times n}$ matrix, then $D$ can be written as
 \begin{equation} \label{eq1}
 D=USV^T
 \end{equation}
@@ -70,31 +73,49 @@ $S$ is a diagonal matrix such as:
     & & s_{r}
   \end{bmatrix}
 \]
-$s_{1}$ to $s_{r}$ are the principal components scores and $s_{1} >= s_{2} >= ... >= s_{r-1} >= s_{r}$.\par
+Where $s_{1}$ to $s_{r}$ are the principal components scores and $s_{1} >= s_{2} >= ... >= s_{r-1} >= s_{r}$.\par
 $U$ is the eigenvector matrix, with eigenvectors ordered by the component scores, their eigenvalues.
-\subsection{Reducing dimensions}
-Given the original data set, $D_{m\times n}$ and $U_{m\times r}$ obtained from equation (\ref{eq1}), we can build a new reduced data set $P_{m\times k}$ with the first $k<r$ eigenvectors. This new data set is computed as:
-\begin{equation}
-P_{m\times k} = D_{m\times n} U_{n\times k}
+\subsection{Principal Component Analysis}
+To apply PCA we will use equation (\ref{eq1}) from the singular value decomposition and apply it to the covariance matrix $\Sigma$ of a data set. If the data set $D$ has dimensions ${m\times n}$ then the covariance matrix $\Sigma$ will be a symmetrical square matrix of dimensions $n\times n$. So
+\begin{equation}\label{eq2}
+\Sigma_{n\times n} = U_{n\times n}S_{n\times n}V_{n\times n}^T
 \end{equation}
-where $U_{n\times k}$, or $U_k$, is the eigenvector matrix truncated to the first $k$ eigenvectors.
-\subsection{Restoring data}
-To restore the original data from $P$ we compute \[PU_{k}^T = DU_{k}U_{k}^T = DI_{n} = D\]
+Where
+\begin{itemize}
+\item $U$ is unitary\footnote{If $U$ is unitary then $U^{T}U=UU^{T}=I$} and holds $\Sigma$ eigenvectors
+\item $S$ is a diagonal matrix with $s_1 ... s_n$ as the descending ordered eigenvalues.
+\end{itemize}
+As $U$ is unitary then we can transform the original $D$ data set into $P_{m\times n} = D_{m\times n}U_{n\times n}$ and restore it back with:
+\[P U^T = DUU^T = DI = D\]
+$P$ is a transformation of $D$ that retains all the information of the original data set.
 
 \section{PCA for image compression}
-A computer image is usually thought of as a two dimensional matrix, with $m$ lines and $n$ columns representing the horizontal e vertical pixels of the image. A simpler, albeit equally meaningful, representation is a single vector with $m\times n$ cells for the whole image. The content of each cell, in either representation, depend on the selected image mode. For example: RGB, RGB grayscale, CMYK, etc. For the purposes of the following argument and the presented implementation, we assume that each cell is an integer between 0 and 255, representing the grayscale RGB value of the pixel.\par
-Lets assume that $D$ is a data set with $m$ images where each image has $n$ pixels. The method will work even if $m<n$ but a larger $m$ will result in better compression gains and finer eigenvector tuning.\par
-So $D_{m\times n}$ is a data set with $m$ data points $\in \mathbb{R}^n$ where $m >= n$. Then we define ${D}_{m\times n}^*$ as the normalized data set, \[D^* = \frac{D-\overline{D}}{s}\] 
-where $\overline{D}$ is the mean of $D$ and $s$ is the sample standard deviation. Let $\Sigma_{n\times n} = cov(D^*)$ be the covariance matrix of $D^*$ \[\Sigma = \frac{1}{m}D^{*T}D^*\] Then, according to equation (\ref{eq1}), the singular value decomposition of $\Sigma$ is: \[\Sigma = US V^T\] where:
+A computer image is usually thought of as a two dimensional matrix, with $m$ lines and $n$ columns representing the horizontal e vertical pixels of the image. A simpler, albeit equally meaningful, representation is a single vector with $m\times n$ cells for the whole image. The content of each cell, in either representation, depends on the selected image mode. For example: RGB, RGB grayscale, CMYK, etc. For the purposes of the following argument and the included implementation, we assume that each cell is an integer between 0 and 255, representing the grayscale RGB value of the corresponding pixel.\par
+Lets assume that $D$ is a data set with $m$ images where each image has $n$ pixels. The method will work even if $m<n$ but it is recommended that $m >= n$, as that will result in better compression gains and finer eigenvector tuning.\par
+Given that $D_{m\times n}$ is a data set with $m$ data points $\in \mathbb{R}^n$ where $m >= n$. Then we define ${D}_{m\times n}^*$ as the normalized data set, \[D^* = \frac{D-\overline{D}}{s}\] 
+where $\overline{D}$ is the mean of $D$ and $s$ is the sample standard deviation of D. Let $\Sigma_{n\times n}$ be the covariance matrix of $D^{*}_{m\times n}$ \[\Sigma = \frac{1}{m}D^{*T}D^*\] Then, according to (\ref{eq1}) and (\ref{eq2}), the singular value decomposition of $\Sigma$ is: 
+\begin{equation}\label{eq3}
+\Sigma = US V^T
+\end{equation}
+where:
 \begin{itemize}
-\item $U$ is an $n\times n$ unitary matrix\footnote{If $U$ is unitary then $U^*U=UU^*=I$}
+\item $U$ is an $n\times n$ unitary matrix
 \item $S$ is an $n\times n$ diagonal matrix with non-negative numbers on the diagonal
 \item $V$ is an $n\times n$ unitary matrix and $V^T$ is $V$ transposed.
 \end{itemize}
 
+\subsection{Reducing dimensions}
+Given the original data set, $D_{m\times n}$ and $U_{n\times n}$ obtained from $\Sigma$ as per (\ref{eq3}), then we can build a new reduced data set $P_{m\times k}$ with the first $k<n$ eigenvectors. This new data set is computed as:
+\begin{equation}\label{eq4}
+P_{m\times k} = D_{m\times n} U_{n\times k}
+\end{equation}
+where $U_{n\times k}$, or $U_k$, is the eigenvector matrix truncated to the first $k$ eigenvectors. The information contained on the truncated $(n-k)$ columns is lost in this transformation.
+\subsection{Restoring data}
+As the transformation in (\ref{eq4}) is lossy, meaning that the information on the truncated columns is lost during the transformation, then it is possible to restore $P$ back to $D$ space but the result will not be exactly $D$ but rather an approximation of $D$. The whole rationale of using PCA for image compression is that the last $n-k$ eigenvectors will hold as little variance as possible and the recovered images will be an acceptable approximation of the original images.
+To transform $P$ back to $D$ space we compute \[P_{m\times k}U_{n\times k}^T = D_{m\times n}U_{n\times k}U_{n\times k}^T \approx D_{m\times n}\]
 \section{How to select the number of components to retain}
 The problem of selecting how many components to retain is not new, \citet{zwick1986comparison}, present the results of a Monte Carlo evaluation of five methods that have been proposed for determining how many factors or components to retain: Horn's parallel analysis, Velicer's minimum average partial [MAP], Cattell's scree test, Bartlett's chi-square test, and Kaiser's eigenvalue greater than 1.0 rule. 
-The determination of the number of components or factors to retain is likely to be the most important decision a researcher will make \citet{zwick1986comparison}.
+The determination of the number of components or factors to retain is likely to be the most important decision a researcher will make \citet{zwick1986comparison}.\par
 
 \section{Implementation}
 The code for the implementation and supporting documents can be found at \citet{Stelling:aa}.
