Review of the first 3 sections

--- a/text/imgPCA.tex
+++ b/text/imgPCA.tex
@@ -6,7 +6,7 @@
 \usepackage{amsfonts}
 \usepackage{amsmath}
 
-\title{A data visualization for PCA Analysis / \\ MAI718 3/2017 Final project}
+\title{A data visualization for PCA Analysis \\ MAI718 3/2017 Final project}
 
 % Authors must not appear in the submitted version. They should be hidden
 % as long as the \iclrfinalcopy macro remains commented out below.
@@ -36,12 +36,12 @@ Rio de Janeiro, RJ 21941-916, Brazil \\
 \pagestyle{plain}
 
 \begin{abstract}
-Traditionally PCA Analysis for features reduction in images is performed without a systematic visual aid approach. This paper describes the implementation of a PCA Analysis tool in JavaScript that uses data visualization techniques aiming to improve the analysis process.
+Traditionally PCA Analysis for dimension reduction in images is performed without a systematic visual aid approach. This paper describes a data visualization tool for PCA Analysis implemented in JavaScript aiming to improve the analyst decision process.
 \end{abstract}
 
 \section{Problem description}
 There are many reasons to reduce a data set, some examples are: noise reduction, outlier removal, lossy image compression or even as a preliminary step in various types of data exploration and data analysis.\par
-Principal component analysis (PCA) is well suited as a lossy image compression solution, as you can apply PCA on a set of points of a data set and reduce its dimensionality with a certain, desirably controllable, loss of precision. Of course, one want to loose as little precision as possible while compressing as much as possible. There is a clear trade off between compression and precision. With images, the main difficulty resides in this very trade off: how many dimensions can the algorithm throw away and still retain the desired level of image quality or sharpness? Is there a general rule where you can certainly decide how many dimensions will be cut off the original data set? Of course, the type and amount of data available for compression, the data set, has a big influence on the final point where the cut will be, but can the analyst decide simply on the number of dimensions or amount of variance that will be thrown away and be sure that the results will be satisfactory? We propose that using a visual helping tool during the decision process can have a positive impact on the cut off selection.
+Principal component analysis (PCA) can be applied as a lossy image compression solution, as you can use PCA on a set of images of a data set and reduce its dimensionality with a certain, desirably controllable, loss of precision. Of course, one want to loose as little precision as possible while compressing as much as possible. There is a clear trade off between compression and precision. With images, the main difficulty resides in this very trade off: how many dimensions can be thrown away making sure that the resulting images still retain the desired level of quality or sharpness? Is there a general rule where you can certainly decide how many dimensions will be cut off the original data set? Of course, the type and amount of data available for compression, the data set, has a big influence on the precise point where the cut will happen, but can the analyst decide simply on the number of dimensions or amount of variance that will be thrown away and be sure that the results will be satisfactory? We propose that using a visual helping tool during the decision process can have a positive impact on the cut off selection.
 
 \section{Brief introduction to PCA}
 \subsection{Objective}
@@ -56,12 +56,12 @@ PCA can be thought of as the problem of fitting an $n$-dimensional ellipsoid to 
 \subsection{Singular Value Decomposition}
 Given an arbitrary $D_{m\times n}$ matrix, then $D$ can be written as
 \begin{equation} \label{eq1}
-D=USV^T
+D_{m\times n}=U_{m\times r}S_{r\times r}V_{n\times r}^T
 \end{equation}
 where
 \begin{enumerate}
-\item[(i)] $U_{m\times r}$, $V_{n\times r}$ each of which with orthonormal\footnote{both orthogonal and normalized} columns so that $U^TU=I_{r}$, $V^TV=I_{r}$;
-\item[(ii)] $S_{r\times r}$ is a diagonal matrix;
+\item[(i)] $U$ and $V$ are built with orthonormal\footnote{both orthogonal and normalized} columns so that $U^TU=I_{r}$, $V^TV=I_{r}$;
+\item[(ii)] $S$ is a diagonal matrix;
 \item[(iii)] $r$ is the rank\footnote{corresponds to the maximal number of linearly independent columns of D} of $D$.
 \end{enumerate}
 $S$ is a diagonal matrix such as:
@@ -85,12 +85,13 @@ Where
 \item $U$ is unitary\footnote{If $U$ is unitary then $U^{T}U=UU^{T}=I$} and holds $\Sigma$ eigenvectors
 \item $S$ is a diagonal matrix with $s_1 ... s_n$ as the descending ordered eigenvalues.
 \end{itemize}
-As $U$ is unitary then we can transform the original $D$ data set into $P_{m\times n} = D_{m\times n}U_{n\times n}$ and restore it back with:
+As $U$ is unitary then we can transform the original $D$ data set into $P$
+\[ P_{m\times n} = D_{m\times n}U_{n\times n} \] and restore it back with:
 \[P U^T = DUU^T = DI = D\]
 $P$ is a transformation of $D$ that retains all the information of the original data set.
 
 \section{PCA for image compression}
-A computer image is usually thought of as a two dimensional matrix, with $m$ lines and $n$ columns representing the horizontal e vertical pixels of the image. A simpler, albeit equally meaningful, representation is a single vector with $m\times n$ cells for the whole image. The content of each cell, in either representation, depends on the selected image mode. For example: RGB, RGB grayscale, CMYK, etc. For the purposes of the following argument and the included implementation, we assume that each cell is an integer between 0 and 255, representing the grayscale RGB value of the corresponding pixel.\par
+A computer image is usually thought of as a two dimensional matrix, with $m$ lines and $n$ columns representing the horizontal and vertical pixels of the image. A simpler, albeit equally meaningful, representation is a single vector with $m\times n$ cells for the whole image. The content of each cell, in either representation, depends on the selected image mode. For example: RGB, RGB grayscale, CMYK, etc. For the purposes of the following argument and the solution implementation, we assume that each cell is an integer between 0 and 255, representing the grayscale RGB value of the corresponding pixel.\par
 Lets assume that $D$ is a data set with $m$ images where each image has $n$ pixels. The method will work even if $m<n$ but it is recommended that $m >= n$, as that will result in better compression gains and finer eigenvector tuning.\par
 Given that $D_{m\times n}$ is a data set with $m$ data points $\in \mathbb{R}^n$ where $m >= n$. Then we define ${D}_{m\times n}^*$ as the normalized data set, \[D^* = \frac{D-\overline{D}}{s}\] 
 where $\overline{D}$ is the mean of $D$ and $s$ is the sample standard deviation of D. Let $\Sigma_{n\times n}$ be the covariance matrix of $D^{*}_{m\times n}$ \[\Sigma = \frac{1}{m}D^{*T}D^*\] Then, according to (\ref{eq1}) and (\ref{eq2}), the singular value decomposition of $\Sigma$ is: 
@@ -111,8 +112,8 @@ P_{m\times k} = D_{m\times n} U_{n\times k}
 \end{equation}
 where $U_{n\times k}$, or $U_k$, is the eigenvector matrix truncated to the first $k$ eigenvectors. The information contained on the truncated $(n-k)$ columns is lost in this transformation.
 \subsection{Restoring data}
-As the transformation in (\ref{eq4}) is lossy, meaning that the information on the truncated columns is lost during the transformation, then it is possible to restore $P$ back to $D$ space but the result will not be exactly $D$ but rather an approximation of $D$. The whole rationale of using PCA for image compression is that the last $n-k$ eigenvectors will hold as little variance as possible and the recovered images will be an acceptable approximation of the original images.
-To transform $P$ back to $D$ space we compute \[P_{m\times k}U_{n\times k}^T = D_{m\times n}U_{n\times k}U_{n\times k}^T \approx D_{m\times n}\]
+The transformation in (\ref{eq4}) is lossy, meaning that the information on the truncated columns is lost during the transformation, then it is possible to restore $P$ back to $D$ space but the result will not be exactly $D$ but rather an approximation of $D$. The whole rationale of using PCA for image compression is that the last $n-k$ eigenvectors will hold as little variance as possible and the recovered images will be an acceptable approximation of the original images.
+To transform $P$ back into $D$ space we compute \[P_{m\times k}U_{n\times k}^T = D_{m\times n}U_{n\times k}U_{n\times k}^T \approx D_{m\times n}\]
 \section{How to select the number of components to retain}
 The problem of selecting how many components to retain is not new, \citet{zwick1986comparison}, present the results of a Monte Carlo evaluation of five methods that have been proposed for determining how many factors or components to retain: Horn's parallel analysis, Velicer's minimum average partial [MAP], Cattell's scree test, Bartlett's chi-square test, and Kaiser's eigenvalue greater than 1.0 rule. 
 The determination of the number of components or factors to retain is likely to be the most important decision a researcher will make \citet{zwick1986comparison}.\par
